--- a/OpenHack-Serverless-Team-1.csproj
+++ b/OpenHack-Serverless-Team-1.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
