--- a/OpenHack-Serverless-Team-1.csproj
+++ b/OpenHack-Serverless-Team-1.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>OpenHack_Serverless_Team_1</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="4.0.5" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
   </ItemGroup>
